@@ -2,6 +2,14 @@
 \name{NEWS}
 \title{NEWS file for the tram package}
 
+\section{Changes in Version 0.2-4 (2018-11-02)}{
+  \itemize{
+    \item{\code{log_first = TRUE} is now accepted by \code{tram} and all 
+          model functions calling \code{tram}. This is still experimental.}
+  }
+}
+
+
 \section{Changes in Version 0.2-3 (2018-09-17)}{
   \itemize{
     \item{New \code{extrapolate = TRUE} option for all models constraints
